# svg-wasm

./: .gitignore  Cargo.toml  README.md  build.ts  deno.json  main.test.ts  main.ts  package.json  svg-tool.node
examples/deno-example/: deno.json  main.ts  main_test.ts
examples/nodejs-example/: README.md  index.cjs  index.mjs  package.json
examples/vite-example/: bundle.html  fetch.html  index.d.ts  index.html  package.json  vite.config.mts
examples/vite-example/src/: bundle.ts  fetch.ts  index.ts
scripts/: $.ts  build.ts
src/: lib.rs  test.rs
template/: svg_wasm_bg_wasm.ts
