# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "svg-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
resvg = "0.43.0"
libwebp-sys = { version = "0.10.0", default-features = false, features = [
  "neon",
] }
wasm-bindgen = "0.2.92"
