# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "svg-wasm"
version = "0.4.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
resvg = "0.43.0"
image = "0.25.2"
wasm-bindgen = "0.2.92"


[profile.release]
lto = true
opt-level = 'z'
